<resources>
    <string name="app_name">SmartBus</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="description">Never miss your bus with SmartBus</string>
    <string name="title_activity_login">Smart Bus</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_shared_prefs">smart-bus-sharedprefs</string>
    <string name="login_admin">Login as Admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Bus</string>
    <string name="nav_header_subtitle">Seamless bus tracking...</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="invalid_usertype">Usertype must be valid </string>
    <string name="invalid_name">Name must be at least 3 characters</string>
    <string name="invalid_busno">bus No. must be at least 3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="incorrect_fields">Please correct the input field errors, first!</string>
    <string name="register_login_hint">Already have an account? Login</string>


    <string name="menu_home">Home</string>
    <string name="menu_buses">Buses</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="registration">Don\'t have an account? Sign Up</string>
    <string name="loginpassword">Password</string>
    <string name="loginemail">Email</string>
    <string name="bus_no">Bus No.</string>
    <string name="student">Student</string>
    <string name="driver">Driver</string>
    <string name="stop_broadcasting">Stop Driving</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>

    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="start_driving">Start Driving</string>
    <string name="stop_driving">Stop Driving</string>
    <string name="stopping">"Stopping..."</string>
    <string name="forgot_password">Forgot Password</string>

    <style name="arg_bus_no">bus_no_arg</style>

    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>