<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_xxl"
        android:layout_marginStart="@dimen/m_lg"
        android:layout_marginEnd="@dimen/m_lg"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/brandName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:textColor="@color/orange_light"
        android:text="Smart Bus"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"/>


    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="Tracking your bus easier with Smart Bus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brandName" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:lineSpacingExtra="20sp"
        android:text="Login"
        android:textColor="#23203f"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tlemail"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:hint="@string/loginemail"
            android:minHeight="48dp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tlpass"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:typeface="sans"
            android:hint="@string/loginpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />
    </com.google.android.material.textfield.TextInputLayout>



    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlpass"
        tools:visibility="visible" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/loading"
        app:layout_constraintTop_toBottomOf="@id/loading"
        app:layout_constraintEnd_toEndOf="@id/tlemail"
        app:layout_constraintHorizontal_bias="1.0"
         />

    <TextView
        android:id="@+id/btnregistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:clickable="true"
        android:text="@string/registration"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/btnlogin"
        app:layout_constraintEnd_toEndOf="@id/btnlogin"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/btnforgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/btnregistration"
        app:layout_constraintEnd_toEndOf="@id/btnregistration"
        app:layout_constraintHorizontal_bias="1.0"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>